styles/styles.css
@font-face {
    font-family: "Boldie";
    src: url("//db.onlinewebfonts.com/t/3d326e4a3753d0f1220967bb7cbc88b7.eot");
    src: url("//db.onlinewebfonts.com/t/3d326e4a3753d0f1220967bb7cbc88b7.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/3d326e4a3753d0f1220967bb7cbc88b7.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/3d326e4a3753d0f1220967bb7cbc88b7.woff") format("woff"), url("//db.onlinewebfonts.com/t/3d326e4a3753d0f1220967bb7cbc88b7.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/3d326e4a3753d0f1220967bb7cbc88b7.svg#Boldie") format("svg");
}

html {
    font-family: 'Boldie', Helvetica, Tahoma;
    background: url(../img/background.png);
    color: White;
    box-sizing: border-box;

}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 500;

}

#heading {
    text-align: center;
}

#logo {
    height: auto;
    width: 100px;
}

a {
    text-decoration: none;
    color: inherit;
}

.front-content,
.content {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 2px;
    margin-top: 10px;
}

.content {
    margin-top: 10px;
}

.front-content {
    font-size: 20px;
    text-align: center;
    font-weight: 600;
}

.front-item {
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-items: center;
    width: 400px;

}

.item {
    background-color: antiquewhite;
    color: black;
    border-style: solid;
    border-color: rgba(118, 218, 60, 0.5);

}

.left{
    color: black;
    gap: 20px;
    padding-left: 30px;
    width: 300px;
    height: 1520px;
}

.ingredients-container{
    border: 1px solid rgba(118, 218, 60, 0.5);
    background-color: antiquewhite;
    color: black;
    height: 1000px;
}

.right-top{
    background-color: antiquewhite;
    color: black;
    border: 1px solid rgba(118, 218, 60, 0.5);
    height: 348px;
}

.directions-container{
    background-color: antiquewhite;
    color: black;
    margin-top: 20px;
    border: 1px solid rgba(118, 218, 60, 0.5);
    height: 1000px;
}

.front-item {
    margin: 2px;
}

.nav {
    text-align: center;
}

.nav a {
    margin: 10px;
    font-size: 20px;

}

.nav a:hover {
    background-color: rgba(118, 218, 60, 0.5);

}

div img {
    width: 300px;
    height: 350px;
}

